fixed horizontal overflow

--- a/media.css
+++ b/media.css
@@ -16,7 +16,7 @@
   }
 
   .sidebar {
-    width: 100vw;
+    width: 100%;
     height: 95vh;
     justify-content: center;
   }
